--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<div id="modal-dialog"></div>
+		<div id="modal"></div>
 		<script
 			src="https://kit.fontawesome.com/dd565c259e.js"
 			crossorigin="anonymous"
